# roest

./: .gitignore  Cargo.toml  README.md
assets/shaders/: basic.frag  basic.vert
lib/gl/: Cargo.toml  build.rs
lib/gl/src/: lib.rs
lib/gl_renderer/: Cargo.toml
lib/gl_renderer/src/: buffer.rs  buffered_uniform_struct_shared.rs  color_buffer.rs  data.rs  indexed_vert_array.rs  lib.rs  light.rs  program.rs  renderables.rs  shader.rs  texture.rs  uniform_buffer.rs  uniform_struct_shared.rs  uniform_struct_std140.rs  vertex.rs  viewport.rs
lib/gl_renderer/src/data/: f16_inner.rs  f32_inner.rs  f64_inner.rs  i16_float_inner.rs  i16_inner.rs  i32_float_inner.rs  i32_inner.rs  i8_float_inner.rs  i8_inner.rs  material_data.rs  matrix_data.rs  matrix_data_zst.rs  mesh_data.rs  misc_inner.rs  u16_float_inner.rs  u16_inner.rs  u32_float_inner.rs  u32_inner.rs  u8_float_inner.rs  u8_inner.rs  vector_data.rs  vector_data_zst.rs  vertex_data.rs
lib/gl_renderer/src/data/material_data/: flat.rs
lib/gl_renderer/src/data/mesh_data/: indexed_mesh.rs
lib/gl_renderer/src/data/vector_data/: f16_inner.rs  f32_inner.rs  f64_inner.rs  i16_float_inner.rs  i16_inner.rs  i32_float_inner.rs  i32_inner.rs  i8_float_inner.rs  i8_inner.rs  misc_inner.rs  u16_float_inner.rs  u16_inner.rs  u32_float_inner.rs  u32_inner.rs  u8_float_inner.rs  u8_inner.rs
lib/gl_renderer/src/data/vertex_data/: colored_vertex.rs
lib/gl_renderer/src/light/: directional_light.rs  point_light.rs  spot_light.rs
lib/gl_renderer/src/renderables/: indexed_mesh.rs  mesh_renderer.rs  triangle.rs
lib/gl_renderer/src/vertex/: basic_vertex.rs  minimal_vertex.rs  normal_vertex.rs
lib/renderer_derive/: Cargo.toml
lib/renderer_derive/src/: gl_getters.rs  gl_setters.rs  gpu_variant.rs  lib.rs
lib/roefs/: Cargo.toml
lib/roefs/src/: lib.rs  synchronous.rs
lib/slotted_tree/: Cargo.toml
lib/slotted_tree/src/: lib.rs
offline_systems/mesh_importer/: Cargo.toml
offline_systems/mesh_importer/src/: cli.yml  main.rs
offline_systems/scene_editor/: Cargo.toml
offline_systems/scene_editor/src/: editor_component.rs  main.rs  tree_list.rs
roest_runtime/: Cargo.toml  build.rs
roest_runtime/src/: core_components.rs  core_resources.rs  core_systems.rs  lib.rs  main.rs
roest_runtime/src/core_components/: camera.rs  indexed_mesh.rs  material.rs  renderable.rs  transform.rs
roest_runtime/src/core_components/light/: point_light.rs
roest_runtime/src/core_components/material/: basic.rs  flat.rs  textured_basic.rs
roest_runtime/src/core_components/renderable/: mesh_renderer.rs
roest_runtime/src/core_resources/: gpu_blocks.rs  scene_graph.rs  tree.rs
roest_runtime/src/core_systems/: file_system.rs  renderer.rs  resource_manager.rs
roest_runtime/src/core_systems/file_system/: synchronous.rs
roest_runtime/src/core_systems/object_models/: indexed_mesh.rs  triangle.rs
roest_runtime/src/core_systems/renderer/: program.rs  shader.rs  vertex_attrib_pointers.rs
roest_runtime/src/core_systems/renderer/data/: f16_inner.rs  f32_inner.rs  i16_float_inner.rs  i16_inner.rs  i32_inner.rs  u32_inner.rs  u8_float_inner.rs  u8_inner.rs
roest_runtime/src/core_systems/resource_manager/: data_loaders.rs  resource.rs
roest_runtime/src/core_systems/resource_manager/data_loaders/: image_loader.rs  indexed_mesh_loader.rs  indexed_vert_array_loader.rs  material_loader.rs  program_loader.rs  shader_loader.rs
scene_editor/: Cargo.toml  scene_editor.glade~
scene_editor/src/: component_none.glade~  component_transform.glade~  editor_component.rs  editor_components.rs  event.rs  main.rs  scene_editor.glade  scene_editor.glade~  tree_list.rs
scene_editor/src/editor_components/: camera.rs  component_none.glade  component_transform.glade  component_transform.glade~  editor_component.rs  indexed_mesh.rs  light.rs  material.rs  transform.rs
scene_editor/src/editor_components/light/: component_point_light.glade  component_point_light.glade~  point_light.rs
scene_editor/src/editor_components/material/: basic.rs  component_basic.glade  component_basic.glade~
src/: build.rs  main.rs
src/core_systems/: mod.rs  object_models.rs  renderer.rs
src/core_systems/file_system/: mod.rs  synchronous.rs
src/core_systems/object_models/: game_object.rs  indexed_mesh.rs  mesh.rs  mod.rs  movable.rs  triangle.rs
src/core_systems/renderer/: buffer.rs  color_buffer.rs  data.rs  program.rs  shader.rs
src/core_systems/renderer/data/: f16_inner.rs  f32_f32_f32_inner.rs  f64_inner.rs  i32_float_inner.rs  i8_float_inner.rs  i8_inner.rs  misc_inner.rs  u16_float_inner.rs  u16_inner.rs  u2_u10_u10_u10_rev_float_inner.rs  u32_float_inner.rs
src/core_systems/resource_manager/: data_loader.rs  mod.rs  resource.rs  shader_loader.rs
src/runtime_systems/objects/: mod.rs  static_object.rs
