[package]
name = "roest_runtime"
version = "0.1.0"
authors = ["Felix Brakel <felixbrakel@quicknet.nl>"]
edition = "2018"
publish = false

#[workspace]

[dependencies]
gl = { path = "../lib/gl" }
gl_renderer = { path = "../lib/gl_renderer" }
renderer_derive = { path = "../lib/renderer_derive" }
roefs = { path = "../lib/roefs" }
sdl2 = "0.32.2"
lazy_static = "1.4.0"
failure = "0.1.7"
nalgebra = "0.20.0"
serde = "1.0.106"
bincode = "1.2.1"
legion = "0.2.1"
hibitset = "0.6.3"
approx = "0.3.2"

[build-dependencies]
walkdir = "2.2.9"