[package]
name = "scene_editor"
version = "0.1.0"
authors = ["Felix Brakel <felixbrakel@quicknet.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.9.5"
termion = "1.5.5"
roest_runtime = { path = "../roest_runtime" }
slotmap = "0.4.0"
legion = "0.2.2"
serde = "1.0.112"
thiserror = "1.0.20"
slotted_tree = { path = "../lib/slotted_tree" }
anyhow = "1.0.31"

[dependencies.gtk]
version = "0.9.0"
features = ["v3_24"]

[dependencies.gio]
version = ""
features = ["v2_44"]
