[package]
name = "scene_editor"
version = "0.1.0"
authors = ["Felix Brakel <felixbrakel@quicknet.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roest_runtime = { path = "../roest_runtime" }
slotmap = "0.4.0"
legion = "0.2.4"
serde = "1.0.112"
thiserror = "1.0.20"
slotted_tree = { path = "../lib/slotted_tree" }
anyhow = "1.0.31"
gl = { path = "../lib/gl" }
gl_renderer = { path = "../lib/gl_renderer" }
renderer_derive = { path = "../lib/renderer_derive" }
epoxy = "0.1.0"
shared_library = "0.1.9"
nalgebra = "0.21.1"
image = "0.23.4"
gtk = "0.15.5"