[package]
name = "gl_renderer"
version = "0.1.0"
authors = ["Felix Brakel <felixbrakel@quicknet.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = { path = "../gl" }
renderer_derive = { path = "../renderer_derive" }
nalgebra = "0.21.1"
half = { version = "1.5.0", features = ["serde"] }
vec-2-10-10-10 = "0.1.2"
serde = { version = "1.0.106", features = ["derive"] }
c_str_macro = "1.0.2"
thiserror = "1.0.20"