[package]
name = "slotted_tree"
version = "0.1.0"
authors = ["Felix Brakel <felixbrakel@quicknet.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slotmap = { version = "0.4.0", features = ["serde"] }
serde = { version = "1.0.114", features = ["derive"] }
thiserror = "1.0.20"