[package]
name = "mesh_importer"
version = "0.1.0"
authors = ["Felix Brakel <felixbrakel@quicknet.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tobj = "0.1.11"
clap = {version = "~2.33.0", features = ["yaml"]}
roest_runtime = { path = "../../roest_runtime"}