[package]
name = "scene_editor"
version = "0.1.0"
authors = ["Felix Brakel <felixbrakel@quicknet.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.9.5"
termion = "1.5.5"
roest_runtime = { path = "../../roest_runtime" }
legion = "0.2.2"
serde = "1.0.112"
failure = "0.1.7"
